--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1385,3 +1385,19 @@ footer {
 		height: 24px;
 	}
 }
+.scroll-button {
+	animation-name: scroll-rotate;
+	animation-duration: 10s;
+	animation-iteration-count: infinite;
+}
+@keyframes scroll-rotate {
+	0% {
+		transform: rotateY(0deg);
+	}
+	10% {
+		transform: rotateY(180deg);
+	}
+	100% {
+		transform: rotateY(180deg);
+	}
+}
