--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -325,22 +325,30 @@ body {
 	justify-content: space-between;
 	&__sliders {
 		flex: 1.3;
+		position: relative;
+		overflow: hidden;
+		overflow-x: hidden;
 	}
 
 	&__slider {
+		position: relative;
+		width: 100%;
+		height: 100%;
 		img {
 			width: 90%;
 			height: 90%;
 		}
 	}
-	&__slider-1 {
-	}
 	&__slider-2 {
-		display: none;
+		position: absolute;
+		left: -100%;
+		top: 0%;
 		padding-left: 100px;
+		width: 50%;
+		height: 100%;
 		img {
-			width: 280px;
-			height: 400px;
+			width: 100%;
+			height: 100%;
 		}
 	}
 
@@ -1407,5 +1415,40 @@ footer {
 	}
 	100% {
 		transform: rotateY(180deg);
+	}
+}
+
+@keyframes slider-1 {
+	0% {
+		left: -110%;
+	}
+	5% {
+		left: 0%;
+	}
+	45% {
+		left: 0%;
+	}
+	50% {
+		left: 110%;
+	}
+	100% {
+		left: 110%;
+	}
+}
+@keyframes slider-2 {
+	0% {
+		left: -110%;
+	}
+	50% {
+		left: -110%;
+	}
+	55% {
+		left: 25%;
+	}
+	95% {
+		left: 25%;
+	}
+	100% {
+		left: 135%;
 	}
 }
