JS: burger-menu з багом
баг при відкриванні меню і недороблене закривання при натисканні на один з елементів burger-list

--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -180,6 +180,10 @@ body {
 		border-radius: 0px 14px 14px 0px;
 		cursor: pointer;
 		display: none;
+		.close-menu {
+			padding: 6px;
+			display: none;
+		}
 	}
 	.burger-list {
 		display: none;
