--- a/src/sass/_responsive.scss
+++ b/src/sass/_responsive.scss
@@ -1022,6 +1022,18 @@
 				width: 180px;
 			}
 		}
+		.previous {
+			left: 3%;
+			top: 77%;
+			width: 38px;
+			height: 38px;
+		}
+		.next {
+			right: 3%;
+			top: 77%;
+			width: 38px;
+			height: 38px;
+		}
 	}
 }
 @media (max-width: 396px) {
