JS: bux fix .customers slider, scroll to top

--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -962,6 +962,10 @@ body {
 		justify-content: space-between;
 		padding: 80px 100px 140px 100px;
 	}
+	&__slider:nth-child(1),
+	&__slider:nth-child(2) {
+		display: none;
+	}
 	.container-big {
 		position: relative;
 	}
