--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -95,6 +95,10 @@ body {
 }
 
 /*-----common styles-----*/
+.status {
+	text-align: center;
+	margin: 0 auto;
+}
 .container {
 	max-width: 950px;
 	margin: auto;
@@ -550,6 +554,8 @@ body {
 	}
 
 	&__container {
+		text-align: center;
+		margin: 0 auto;
 		display: flex;
 		justify-content: space-between;
 	}
@@ -596,6 +602,7 @@ body {
 		}
 
 		&__calc-price {
+			text-align: center;
 			padding-bottom: 30px;
 			p {
 				padding: 0px 20px;
@@ -616,9 +623,13 @@ body {
 		}
 
 		&__upload {
+			margin: 0 auto;
 			display: flex;
 			flex-direction: column;
 			padding-bottom: 30px;
+		}
+		&__button {
+			margin: 0 auto;
 		}
 	}
 }
@@ -1308,6 +1319,13 @@ footer {
 	}
 }
 .popup-design {
+	.loading,
+	.success,
+	.failure {
+		text-align: center;
+		display: none;
+		padding: 30px 0px;
+	}
 	display: none;
 	&__upload {
 		padding-top: 30px;
@@ -1321,6 +1339,13 @@ footer {
 }
 
 .popup-consultation {
+	.loading,
+	.success,
+	.failure {
+		text-align: center;
+		display: none;
+		padding: 30px 0px;
+	}
 	display: none;
 	&__body {
 		top: 20%;
