--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -145,6 +145,7 @@ body {
 	font-size: 1rem;
 }
 .upload-btn {
+	cursor: pointer;
 	padding: 16px 30px;
 	border-radius: 50px;
 	background-color: transparent;
