--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -822,6 +822,19 @@ body {
 		&__image {
 			position: relative;
 		}
+		&__img-hover {
+			position: absolute;
+			opacity: 0;
+			transition: 0.5s ease;
+			top: 0px;
+			left: -1px;
+			width: 100%;
+			height: 100%;
+			z-index: 3;
+			&:hover {
+				opacity: 1;
+			}
+		}
 		&__body {
 			z-index: 2;
 			position: absolute;
